fixed spacing issue on stats page tables

--- a/static/main.css
+++ b/static/main.css
@@ -262,7 +262,7 @@ h3 {
 }
 .game-stats th {
     text-align: right;
-    width: 40%;
+    width: 65%;
 }
 .game-stats td {
     padding-left: 0.5rem;
